# .i

./: COMPLETE_REFERENCE.md  Cargo.toml  FUNCTION_LIBRARY.md  LANGUAGE_GUIDE.md  LANGUAGE_NAME.txt  README.md  TEST_RESULTS.md  app.manifest  build_and_install.bat  install.bat  install_with_uac.bat  main.py  post_clone_setup.bat  setup.ps1  test.i  uac_launcher.ps1  uninstall.bat
core/: executor.py  installer.py  keywords.py  parser.py  prompt.py  repl.py
examples/: calculator.i  hello.i  stdlib_demo.i
libs/45m/: README.md
libs/_45m/: __init__.py  builtins.py  generated_functions.py
libs/_45m/lib45m/: __init__.py  fs.py  io.py
projects/: tenk_test.i
src/: main.rs  stdlib  stdlib.rs
tools/: generate_10k_functions.py  generate_20k_functions.py
tools/generated_functions/: ai_functions.rs  audio_functions.rs  bio_functions.rs  compression_functions.rs  crypto_functions.rs  data_functions.rs  database_functions.rs  file_functions.rs  finance_functions.rs  game_functions.rs  graphics_functions.rs  math_functions.rs  network_functions.rs  physics_functions.rs  security_functions.rs  stdlib.rs  system_functions.rs  text_functions.rs  time_functions.rs  video_functions.rs  web_functions.rs
