[package]
name = "i-lang"
version = "0.1.0"
edition = "2021"
description = "A minimalist, high-performance programming language"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/i-lang"
keywords = ["programming-language", "interpreter", "minimalist"]
categories = ["development-tools"]

[[bin]]
name = "i"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hashbrown = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
